<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <EditText
                android:id="@+id/et_old"
                android:hint="@string/old_pass"
                android:inputType="textPassword"
                style="@style/signup" />
            <EditText
                android:id="@+id/et_new"
                android:hint="@string/new_pass"
                android:inputType="textPassword"
                style="@style/signup" />
            <EditText
                android:id="@+id/et_confirm"
                android:hint="@string/confirm_pass"
                android:inputType="textPassword"
                style="@style/signup" />

            <Button
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:id="@+id/bt_submit"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Submit"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/bar"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
