<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_15sdp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_login_text"
            style="@style/signup_text"
            fontPath="@string/bold"
            android:text="@string/required"
            android:textSize="@dimen/_12sdp" />


        <LinearLayout
            android:id="@+id/ll_lang_lay"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_login_text"
            android:layout_marginTop="@dimen/_15sdp">


            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:src="@android:drawable/ic_delete" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ph_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_lang_lay"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_phone_number"
                style="@style/signup"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext"
                android:inputType="number" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_username"
                style="@style/signup"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="number" />

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/ll_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_ph_user">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_optional_text"
                style="@style/signup_text"
                android:text="@string/optional"
                android:textSize="@dimen/_12sdp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_location"
                style="@style/signup"
                android:layout_below="@+id/tv_optional_text"
                android:hint="@string/your_location"
                android:imeOptions="actionNext"
                android:inputType="number" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:background="@drawable/green_button_back"
            android:gravity="center">


            <LinearLayout
                android:id="@+id/ll_right"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerVertical="true">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/iv_right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@android:drawable/ic_delete" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_getcode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/ll_right"
                android:gravity="center"
                android:text="@string/get_code"
                android:textColor="@color/White"
                android:textSize="@dimen/_15sdp" />

        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>