<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_15sdp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_login_text"
            style="@style/signup_text"
            fontPath="@string/bold"
            android:text="@string/verify_phone_number" />



        <LinearLayout
            android:id="@+id/ll_connect_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_below="@+id/tv_login_text"
            android:layout_marginTop="@dimen/_15sdp"
            android:weightSum="2">


            <ImageView
                android:id="@+id/iv_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:src="@android:drawable/ic_delete" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_connect_with_facebook"
                    style="@style/signup_normal_text"
                    android:text="@string/connect_with_facebook"
                    android:textColor="@color/Black"/>
            </LinearLayout>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_next_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:src="@android:drawable/ic_delete" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_connect_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_below="@+id/ll_connect_facebook"
            android:layout_marginTop="@dimen/_15sdp"
            android:weightSum="2">


            <ImageView
                android:id="@+id/iv_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:src="@android:drawable/ic_delete" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_connect_with_google"
                    style="@style/signup_normal_text"
                    android:text="@string/connect_with_google"
                    android:textColor="@color/Black"/>
            </LinearLayout>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_next_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:src="@android:drawable/ic_delete" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_upload_idcard_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_below="@+id/ll_connect_google"
            android:layout_marginTop="@dimen/_15sdp"
            android:weightSum="2">


            <ImageView
                android:id="@+id/iv_three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:src="@android:drawable/ic_delete" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_upload_idcard"
                    style="@style/signup_normal_text"
                    android:text="@string/upload_id_card"
                    android:textColor="@color/Black"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_country_zip_code"
                    style="@style/signup_normal_text"
                    android:text="@string/for_verification_purpose_only"
                    android:textColor="@color/DarkGray"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_next"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:src="@android:drawable/ic_delete" />


        </LinearLayout>

       <!-- <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_zipcode_lay"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_email"
                style="@style/signup"
                android:hint="@string/phone_number"
                android:imeOptions="actionDone"
                android:inputType="number" />

        </LinearLayout>-->




            <RelativeLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:background="@drawable/green_button_back"
                android:layout_alignParentBottom="true">


                <LinearLayout
                    android:id="@+id/ll_right"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerVertical="true">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/iv_right"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@android:drawable/ic_delete" />
                </LinearLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_getcode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@+id/ll_right"
                    android:gravity="center"
                    android:text="@string/signup_caps"
                    android:textColor="@color/White"
                    android:textSize="@dimen/_15sdp" />


        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>